--- a/cmd/faucet/faucet.html
+++ b/cmd/faucet/faucet.html
@@ -105,16 +105,16 @@
 				<h1 style="text-align: center;">UBIC FAUCET</h1>
 			</div>
 			<div class="content">
-				<div style="margin-bottom: 30px;">Fast and reliable. 0.5 test UBIC/day.</div>
+				<div style="margin-bottom: 30px;">Fast and reliable. 1 test UBIC/day.</div>
 				<div style="margin: 0 auto;">
 					<div style="margin-bottom: 10px;">Wallet Address</div>
 					<input id="url" name="url" type="text" class="form-control"
 						placeholder="Please input your ETH wallet address.">
 				</div>
-				<div style="font-size: 14px;margin: 10px 0 24px;">
-					Once you tweet with your address with the drip faucet URL and tell us where to find the tweet,you will get the
-					<span style="color: #4060E3;">test UBIC</span>.
-				</div>
+<!--				<div style="font-size: 14px;margin: 10px 0 24px;">-->
+<!--					Once you tweet with your address with the drip faucet URL and tell us where to find the tweet,you will get the-->
+<!--					<span style="color: #4060E3;">test UBIC</span>.-->
+<!--				</div>-->
 				<!-- <div style="margin-bottom: 24px;text-decoration: underline;">
 					<a style="font-size: 14px;" onclick="openTwitterUrl()">Generate the tweet for me and I'll
 						share!</a>
