fix get ip bugs

--- a/cmd/faucet/faucet.html
+++ b/cmd/faucet/faucet.html
@@ -126,7 +126,7 @@
 							placeholder="Please input your tweet URL.">
 					</div>
 				</div> -->
-				<div style="margin-bottom: 34px;display: flex;justify-content: center;align-items: center;"
+				<div style="margin-bottom: 34px;margin-top:24px;display: flex;justify-content: center;align-items: center;"
 					id="recaptcha_element"></div>
 				<div style="text-align: center;">
 					<button style="max-width: 100%;width: 664px;height: 47px;" type="button" onclick="submit()">Send Me Test
