--- a/cmd/faucet/faucet.html
+++ b/cmd/faucet/faucet.html
@@ -132,7 +132,7 @@
 					<button style="max-width: 100%;width: 664px;height: 47px;" type="button" onclick="submit()">Send Me Test
 						UBIC</button>
 				</div>
-				<div id="time_left_tip" style="color: red;display: none;">Please collect the UBIC token tomorrow. lt has been less than <span style="color: #4060E3;" id="time_left"></span> since the last collection.</div>
+				<div id="time_left_tip" style="font-size: 14px;color: red;margin-top: 8px;text-align: center;display: none;">Please collect the UBIC token tomorrow. lt has been less than <span style="color: #4060E3;" id="time_left"></span> since the last collection.</div>
 			</div>
 		</div>
 	</div>
