--- a/cmd/faucet/faucet.html
+++ b/cmd/faucet/faucet.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>UBIC FAUCET</title>
+	<title>INI FAUCET</title>
 
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
@@ -102,10 +102,10 @@
 	<div id="contendBody" class="container">
 		<div class="contentWrap">
 			<div class="row" style="margin-bottom: 24px;">
-				<h1 style="text-align: center;">UBIC FAUCET</h1>
+				<h1 style="text-align: center;">INI FAUCET</h1>
 			</div>
 			<div class="content">
-				<div style="margin-bottom: 30px;">Fast and reliable. 1 test UBIC/day.</div>
+				<div style="margin-bottom: 30px;">Fast and reliable. 1 test INI/day.</div>
 				<div style="margin: 0 auto;">
 					<div style="margin-bottom: 10px;">Wallet Address</div>
 					<input id="url" name="url" type="text" class="form-control"
@@ -113,7 +113,7 @@
 				</div>
 				<!--				<div style="font-size: 14px;margin: 10px 0 24px;">-->
 				<!--					Once you tweet with your address with the drip faucet URL and tell us where to find the tweet,you will get the-->
-				<!--					<span style="color: #4060E3;">test UBIC</span>.-->
+				<!--					<span style="color: #4060E3;">test INI</span>.-->
 				<!--				</div>-->
 				<!-- <div style="margin-bottom: 24px;text-decoration: underline;">
 					<a style="font-size: 14px;" onclick="openTwitterUrl()">Generate the tweet for me and I'll
@@ -130,10 +130,10 @@
 				</div>
 				<div style="text-align: center;">
 					<button style="max-width: 100%;width: 664px;height: 47px;" type="button" onclick="submit()">Send Me Test
-						UBIC</button>
+						INI</button>
 				</div>
 				<div id="time_left_tip" style="font-size: 14px;color: red;margin-top: 8px;text-align: center;display: none;">
-					Please collect the UBIC token tomorrow. lt has been less than <span style="color: #4060E3;"
+					Please collect the INI token tomorrow. lt has been less than <span style="color: #4060E3;"
 						id="time_left"></span> since the last collection.</div>
 			</div>
 		</div>
@@ -144,7 +144,7 @@
 		var attempt = 0;
 		var server;
 		var tier = 0;
-		var symbol = "UBIC";
+		var symbol = "INI";
 		var requests = [];
 		var captcha;
 
@@ -175,7 +175,7 @@
 			var address = $("#url")[0].value
 
 			if (address.match(/^(0x)?[0-9a-fA-F]{40}$/)) {
-				window.open('https://twitter.com/intent/tweet?text=Requesting%20faucet%20funds%20into%20' + address + '%20on%20the%20%23Ubic%20Cloud%20%20test%20network.')
+				window.open('https://twitter.com/intent/tweet?text=Requesting%20faucet%20funds%20into%20' + address + '%20on%20the%20%23InChain%20%20test%20network.')
 			} else {
 				noty({ layout: 'topCenter', text: 'Invalid address!', type: 'error', timeout: 500, progressBar: true });
 			}
