feat: faucet address hint

--- a/cmd/faucet/faucet.html
+++ b/cmd/faucet/faucet.html
@@ -109,7 +109,7 @@
 				<div style="margin: 0 auto;">
 					<div style="margin-bottom: 10px;">Wallet Address</div>
 					<input id="url" name="url" type="text" class="form-control"
-						placeholder="Please input your ETH wallet address.">
+						placeholder="Please input your INI wallet address.">
 				</div>
 				<!--				<div style="font-size: 14px;margin: 10px 0 24px;">-->
 				<!--					Once you tweet with your address with the drip faucet URL and tell us where to find the tweet,you will get the-->
